# pharmsol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crates.js  help.html  index.html  paper.bib  paper.md  release-plz.toml  search-index.js  settings.html  src-files.js  subjects.csv  test.csv
.github/workflows/: base_benchmarks.yml  benchmark.yml  build.yml  docs.yml  performance.yml  pr_benchmarks.yml  release.yml  render.yml
benches/: analytical_vs_ode.rs  data.rs  dsl_matrix.rs  likelihood.rs  likelihood_matrix.rs  native_matrix.rs  nca.rs  ode.rs  performance.rs  predictions.rs  proposal_runtime_matrix.rs  runtime_matrix.rs  runtime_vs_ode.rs  sde_sessions.rs  wasm_ode_compare.rs
benches/common/: mod.rs
browser-compile-bridge/: Cargo.toml  README.md
dev/bench/: data.js
docs/: nca-improvement-plan.md
dsl-proposals/: 02-structured-block-imperative.dsl  04-user-recommended_style.desugared.dsl  04-user-recommended_style.dsi
examples/: analytical_readme.rs  analytical_vs_ode.rs  api_comparison.rs  bimodal_ke_dsl_aot.rs  bimodal_ke_dsl_runtime_jit.rs  bimodal_ke_dsl_runtime_native_aot.rs  bimodal_ke_dsl_runtime_wasm.rs  bimodal_ke_dsl_wasm.rs  bimodal_ke_entrypoint_meta.rs  bke.rs  bytecode_models.rs  compare_solvers.rs  covariate_demo.rs  covariates.rs  debug.rs  dsl_browser_playground.rs  dsl_jit_analytical_covariates.rs  dsl_runtime_jit.rs  dsl_runtime_meta.rs  dsl_runtime_native_aot.rs  dsl_runtime_wasm.rs  em.rs  emit_debug.rs  ergonomic_api.rs  error.rs  error_handling.rs  exa.rs  gendata.rs  jamaas.rs  jit_bench.rs  jit_from_text.rs  jit_one_compartment.rs  json_comprehensive_test.rs  json_exa.rs  likelihood.rs  macro_vs_handwritten_one_cpt.rs  macro_vs_handwritten_two_cpt.rs  nca.rs  new_gd.rs  nsim.rs  (+17 more)
examples/dsl_browser_playground/: app.js  compile-worker.js  index.html  styles.css
examples/neely/: dat.csv  theta.csv
examples/sde_paper/: main.rs
examples/sde_paper_old/: main.rs
joss/: paper.bib  paper.md
pharmsol/: all.html  enum.Cache.html  index.html  macro.dmatrix.html  macro.fa.html  macro.fetch_cov.html  macro.fetch_params.html  macro.lag.html  sidebar-items.js  struct.HashMap.html
pharmsol-dsl/: CHANGELOG.md  Cargo.toml  README.md
pharmsol-dsl/browser-compile-bridge/: Cargo.toml  README.md
pharmsol-dsl/browser-compile-bridge/src/: lib.rs
pharmsol-dsl/src/: analysis.rs  analyze.rs  ast.rs  authoring.rs  diagnostic.rs  execution.rs  ir.rs  lexer.rs  lib.rs  name_match.rs  parser.rs  pipeline.rs  semantic.rs  syntax.rs  test_fixtures.rs
pharmsol-dsl/tests/: dsl_authoring_edge_cases.rs  frontend_hardening.rs
pharmsol-dsl/tests/fixtures/dsl/: 04-user-recommended_style.desugared.dsl  04-user-recommended_style.dsi
pharmsol-macros/: CHANGELOG.md  Cargo.toml  README.md
pharmsol-macros/src/: lib.rs
pharmsol/data/: enum.Event.html  index.html  sidebar-items.js  struct.Covariates.html  struct.Data.html  struct.Occasion.html  struct.Subject.html
pharmsol/prelude/: index.html  sidebar-items.js  trait.EstimateTheta.html  trait.OptimalSupportPoint.html
pharmsol/simulator/: enum.Equation.html  fn.get_population_predictions.html  fn.simulator.html  index.html  sidebar-items.js  type.AnalyticalEq.html  type.DiffEq.html  type.Diffusion.html  type.Drift.html  type.Fa.html  type.Init.html  type.Lag.html  type.M.html  type.Neqs.html  type.Out.html  type.SecEq.html  type.T.html  type.V.html
pharmsolr/: .gitignore  DESCRIPTION  NAMESPACE  README.md
pharmsolr/R/: extendr-wrappers.R  pharmsolr.R
pharmsolr/man/: cmt.Rd  compile_model.Rd  model_metadata.Rd  outeq.Rd  route.Rd  simulate_subject.Rd
pharmsolr/src/: Makevars  Makevars.win  entrypoint.c
pharmsolr/src/rust/: Cargo.toml
pharmsolr/src/rust/src/: lib.rs
schemas/: model-v1.json  model-v2.json
search.desc/pharmsol/: pharmsol-desc-0-.js
src/: build_support.rs  exa_wasm.md  lib.rs  parameter_order.rs  parameters.rs  test_fixtures.rs
src/core/: caching.rs  mod.rs  model_core.rs  model_info.rs  predictions.rs  simulate.rs  solver.rs  state.rs
src/data/: auc.rs  builder.rs  covariate.rs  error_model.rs  error_poly.rs  event.rs  mod.rs  observation.rs  observation_error.rs  parse_pmetrics.rs  residual_error.rs  row.rs  structs.rs  traits.rs
src/data/parser/: mod.rs  (+3 more)
src/dsl/: aot.rs  ast.rs  authoring.rs  compiled_backend_abi.rs  diagnostic.rs  execution.rs  ir.rs  jit.rs  lexer.rs  mod.rs  model_info.rs  native.rs  parser.rs  runtime.rs  rust_backend.rs  semantic.rs  wasm.rs  wasm_compile.rs  wasm_direct_emitter.rs
src/error/: mod.rs
src/exa/: build.rs  load.rs  mod.rs  wasm_plugin_spec.md
src/exa_wasm/: SPEC.md  build.rs  mod.rs
src/gui/: mod.rs
src/jit/: ast.rs  codegen.rs  equation.rs  mod.rs  model.rs  parser.rs  text.rs
src/json/: errors.rs  expression.rs  mod.rs  model.rs  types.rs  validation.rs
src/nca/: analyze.rs  auc.rs  bioavailability.rs  calc.rs  error.rs  mod.rs  observation.rs  params.rs  profile.rs  results.rs  sparse.rs  summary.rs  superposition.rs  terminal.rs  tests.rs  traits.rs  types.rs
src/optimize/: effect.rs  mod.rs  parameters.rs  spp.rs
src/pharmsol/: lib.rs.html
src/simulator/: cache.rs  equation.rs  fitting.rs  likelihood.rs  mod.rs  model.rs  types.rs
tests/: analytical_macro_lowering.rs  api_comparison.rs  authoring_parity_corpus.rs  bimodal_ke_entrypoint_matrix.rs  dsl_authoring_edge_cases.rs  full_feature_dsl_backend_parity.rs  full_feature_macro_parity.rs  mod.rs  nca.rs  numerical_stability.rs  ode_macro_lowering.rs  ode_optimizations.rs  pknca_validation.rs  proposal_runtime_backend_matrix.rs  runtime_backend_matrix.rs  sde_macro_lowering.rs  test_exa.rs  test_jit.rs  test_json.rs  test_pf.rs  test_solvers.rs
tests/browser-e2e/: package-lock.json  package.json  run.mjs
tests/nca/: mod.rs  test_auc.rs  test_params.rs  test_pknca.rs  test_quality.rs  test_terminal.rs  validation.rs
tests/pknca_validation/: README.md  expected_values.json  generate_expected.R  test_scenarios.json
tests/support/: bimodal_ke.rs  proposal_runtime_corpus.rs  runtime_corpus.rs
type.impl/std/: primitive.tuple.js
(+241 files in other folders)
