[workspace]
members = [".", "pharmsol-dsl", "pharmsol-macros"]
resolver = "2"

[workspace.package]
version = "0.28.3"
edition = "2021"
license = "GPL-3.0"
authors = ["Julián D. Otálvaro <juliandavid347@gmail.com>", "Markus Hovd"]
repository = "https://github.com/LAPKB/pharmsol"

[workspace.dependencies]
pharmsol-dsl = { path = "pharmsol-dsl", version = "0.28.3" }
pharmsol-macros = { path = "pharmsol-macros", version = "0.28.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[package]
name = "pharmsol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
autobenches = false
description = "Rust library for solving analytic and ode-defined pharmacometric models."
documentation = "https://lapkb.github.io/pharmsol/"

[features]
default = []
dsl-core = []
dsl-jit = [
    "dsl-core",
    "dep:cranelift",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-native",
]
dsl-aot = ["dsl-core"]
dsl-aot-load = ["dsl-core", "dep:libloading"]
dsl-wasm-compile = ["dsl-core", "dep:wasm-encoder"]
dsl-wasm = ["dsl-wasm-compile", "dep:wasmtime"]
wasm = ["dsl-wasm"]

[dependencies]
pharmsol-dsl = { workspace = true }
pharmsol-macros = { workspace = true }
libloading = { version = "0.9.0", optional = true, features = [] }
cranelift = { version = "0.131.0", optional = true }
cranelift-jit = { version = "0.131.0", optional = true }
cranelift-module = { version = "0.131.0", optional = true }
cranelift-native = { version = "0.131.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1.44"
wasm-encoder = { version = "0.247.0", optional = true }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
ahash = "0.8.12"
csv = "1.4.0"
diffsol = "=0.15.1"
nalgebra = "0.35.0"
ndarray = { version = "0.17.2", features = ["rayon"] }
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
statrs = "0.18.0"
argmin = "0.11.0"
argmin-math = "0.5.1"
quick_cache = "0.7.0"
wasmtime = { version = "44.0.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
approx = "0.5.1"
tempfile = "3.27.0"
tiny_http = "0.12.0"
webbrowser = "1.2.1"

[lib]
bench = false

[[bench]]
name = "native_matrix"
harness = false

[[bench]]
name = "dsl_matrix"
harness = false
required-features = ["dsl-jit", "dsl-aot", "dsl-aot-load", "dsl-wasm"]
