[package]
name = "pharmsol-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for pharmsol. Not intended for direct use."
license = "GPL-3.0"
repository = "https://github.com/LAPKB/pharmsol"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
pharmsol-dsl = { path = "../pharmsol-dsl" }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "visit", "visit-mut"] }
