[package]
name = "pharmsol-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for pharmsol. Not intended for direct use."
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
pharmsol-dsl = { workspace = true }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "visit", "visit-mut"] }
