[package]
name = "pharmsolr"
version = "0.1.0"
edition = "2021"

# Keep this crate out of the parent workspace — it's installed via R, not via
# the top-level `cargo build`.
[workspace]

[lib]
crate-type = ["staticlib"]
name = "pharmsolr"

[dependencies]
extendr-api = "0.9"
# The path dependency points up two levels to the pharmsol crate at the repo
# root. In a published version of this R package, replace with a git or
# crates.io reference, e.g.
#   pharmsol = { version = "0.26", features = ["jit"] }
pharmsol = { path = "../../..", features = ["jit"] }
